--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "Moose",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "reactstrap": "^6.5.0",
     "sw-precache-webpack-plugin": "^0.11.5"
   }
 }
